feat: use generated controller for columns
